Mobile horizontal scrolling issue

--- a/css/steemitpond.css
+++ b/css/steemitpond.css
@@ -2,6 +2,7 @@
 
 html {
 	height: 100%;
+    max-width: 100%;
     overflow: hidden;
 	font-family: 'Lato', sans-serif;
 	background: #008fe8; /* Old browsers */
@@ -12,12 +13,14 @@ html {
 }
 
 body {
+    max-width: 100%;
+    max-height: 100%;
     overflow: hidden;
 }
 
 #steemit-pond {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
     overflow: hidden;
 }
 
